--- a/ui/src/app/views/projectv2/vcs/repository/workflow/show/project.workflow.show.html
+++ b/ui/src/app/views/projectv2/vcs/repository/workflow/show/project.workflow.show.html
@@ -1,4 +1,7 @@
 <ng-container *ngIf="workflow && !loading">
+    <app-project-workflow-entity [entityType]="entityType" [parentType]="'V2Workflow'"
+                                 [schema]="jsonSchema" [data]="workflow.data"
+                                 [path]="workflow.file_path"></app-project-workflow-entity>
     <div class="footer">
         <div class="buttons">
             <button nz-button nzType="primary" [nzLoading]="loading" [disabled]="true">
@@ -6,7 +9,6 @@
             </button>
         </div>
     </div>
-    <app-stages-graph [workflow]="dataGraph"></app-stages-graph>
 </ng-container>
 <nz-alert *ngIf="errorNotFound && !loading" nzType="warning"
           nzDescription="Workflow not found on branch: '{{currentBranch}}'" nzShowIcon></nz-alert>
