--- a/ui/src/app/views/projectv2/vcs/repository/workflow/show/entity/project.workflow.entity.scss
+++ b/ui/src/app/views/projectv2/vcs/repository/workflow/show/entity/project.workflow.entity.scss
@@ -5,7 +5,7 @@
     width: 100%;
     overflow: hidden;
 
-    app-json-form {
+    app-stages-graph {
         flex: 1;
         overflow: hidden;
         overflow-y: auto;
@@ -51,47 +51,5 @@
                 border-left: 1px solid #303030;
             }
         }
-    }
-}
-
-
-:host {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    overflow: hidden;
-
-    app-entity {
-        flex: 1;
-        width: 100%;
-        overflow-y: hidden;
-    }
-
-    .footer {
-        display: flex;
-        flex-direction: row;
-        height: 46px;
-        border-top: 1px solid #d9d9d9;
-        padding: 7px 30px;
-
-        :host-context(.night) & {
-            border-top: 1px solid #434343;
-        }
-
-        .buttons {
-            margin-left: auto;
-
-            button {
-                margin-left: 10px;
-            }
-        }
-    }
-
-    nz-alert {
-        margin: 20px;
-    }
-
-    nz-spin {
-        margin: 50px;
     }
 }
