--- a/ui/src/app/views/projectv2/vcs/repository/workflow/show/entity/project.workflow.entity.html
+++ b/ui/src/app/views/projectv2/vcs/repository/workflow/show/entity/project.workflow.entity.html
@@ -1,8 +1,33 @@
-<ng-container *ngIf="flatSchema && data">
+<ng-container *ngIf="workflowFlatSchema && data">
 
-    <app-stages-graph [workflow]="dataGraph"></app-stages-graph>
+    <div class="leftPanel">
+        <app-stages-graph [ngClass]="{'hide': selectedJob}" [workflow]="dataGraph" (onSelectJob)="selectJob($event)"></app-stages-graph>
+
+
+        <div class="jobForm" *ngIf="selectedJob">
+            <div (click)="selectedJob = undefined">Return to workflow</div>
+            <app-json-form [class.disableSelection]="resizing" [disabled]="resizing" [parentType]="'V2Job'"
+                           [entityType]="actionEntity" [schema]="jobFlatSchema" [data]="jobForm"
+                           (dataChange)="onFormChange($event)"></app-json-form>
+        </div>
+    </div>
+
+
+
+
     <app-resizable-panel minSize="400" [initialSize]="panelSize" (onGrabbingStart)="panelStartResize()"
                          (onGrabbingEnd)="panelEndResize($event)">
+        <ng-container *ngIf="syntaxErrors?.length > 0">
+            <nz-alert nzType="error" [nzMessage]="syntaxErrorTmpl"></nz-alert>
+            <ng-template #syntaxErrorTmpl>
+                <ul>
+                    <li *ngFor="let e of syntaxErrors">
+                        {{e}}
+                    </li>
+                </ul>
+            </ng-template>
+        </ng-container>
+
         <nz-tabset nzType="card" nzSize="small">
             <nz-tab [nzTitle]="path"></nz-tab>
         </nz-tabset>
@@ -11,3 +36,4 @@
                         (nzEditorInitialized)="onEditorInit($event)"></nz-code-editor>
     </app-resizable-panel>
 </ng-container>
+
