--- a/ui/src/app/shared/entity/form/json-form.html
+++ b/ui/src/app/shared/entity/form/json-form.html
@@ -1,5 +1,6 @@
 <form *ngIf="jsonFormSchema && model" nz-form>
     <app-json-form-field *ngFor="let f of jsonFormSchema.types[parentType].fields" [parentType]="parentType"
-        [disabled]="disabled" [field]="f" [jsonFormSchema]="jsonFormSchema" [model]="model" [entityType]="entityType"
-        (modelChange)="mergeModelAndData($event)"></app-json-form-field>
+                         [disabled]="disabled" [field]="f" [jsonFormSchema]="jsonFormSchema" [model]="model"
+                         [entityType]="entityType"
+                         (modelChange)="mergeModelAndData($event)"></app-json-form-field>
 </form>
