--- a/ui/src/app/views/projectv2/vcs/repository/workflow/show/entity/project.workflow.entity.html
+++ b/ui/src/app/views/projectv2/vcs/repository/workflow/show/entity/project.workflow.entity.html
@@ -1,12 +1,14 @@
 <ng-container *ngIf="workflowFlatSchema && data">
 
     <div class="leftPanel">
-        <app-stages-graph [ngClass]="{'hide': selectedJob}" [workflow]="dataGraph"
+        <app-stages-graph [workflow]="dataGraph"
                           (onSelectJob)="selectJob($event)"></app-stages-graph>
 
 
         <div class="jobForm" *ngIf="selectedJob">
-            <div (click)="selectedJob = undefined">Return to workflow</div>
+            <div (click)="selectedJob = undefined">
+                <button nz-button nzType="default">Return to workflow</button>
+            </div>
             <app-json-form [class.disableSelection]="resizing" [disabled]="resizing" [parentType]="'V2Job'"
                            [entityType]="actionEntity" [schema]="jobFlatSchema" [data]="jobForm"
                            (dataChange)="onFormChange($event)"></app-json-form>
