fix(ui): put a clearer description on the button

--- a/ui/src/app/shared/ascode/events/ascode.event.html
+++ b/ui/src/app/shared/ascode/events/ascode.event.html
@@ -22,7 +22,7 @@
     </ul>
     <div class="footer">
         <button nz-button nzType="primary" nzSize="small" [disabled]="loadingPopupButton"
-                [nzLoading]="loadingPopupButton" (click)="resyncEvents()">Resynchronize repository modifications</button>
+                [nzLoading]="loadingPopupButton" (click)="resyncEvents()">Resynchronize Pull-request on VCS</button>
     </div>
 
 </div>
