feat: add runsidebar + workflow graph with jobrun

--- a/ui/src/app/shared/tree/tree.html
+++ b/ui/src/app/shared/tree/tree.html
@@ -11,6 +11,17 @@
                 <span class="text" (click)="clickOnNodeLink(node, $event)">{{ node.name
                     }}</span>
             </div>
+            <ng-container *ngIf="node?.menu?.length > 0">
+                <button nz-button nzType="text" nzSize="small">
+                    <i nz-icon nzType="more" nzTheme="outline" nz-dropdown [nzDropdownMenu]="menu" nzTrigger="click"
+                       (click)="$event.stopPropagation()"></i>
+                </button>
+                <nz-dropdown-menu #menu="nzDropdownMenu">
+                    <ul nz-menu>
+                        <li nz-menu-item *ngFor="let item of node.menu" [routerLink]="item.route">{{item.name}}</li>
+                    </ul>
+                </nz-dropdown-menu>
+            </ng-container>
         </div>
     </nz-tree-node>
 
