--- a/ui/src/app/views/projectv2/project.html
+++ b/ui/src/app/views/projectv2/project.html
@@ -6,7 +6,13 @@
         <ng-container *ngIf="project">
             <app-resizable-panel growDirection="after" minSize="250" [initialSize]="panelSize"
                 (onGrabbingStart)="panelStartResize()" (onGrabbingEnd)="panelEndResize($event)">
-                <app-projectv2-sidebar class="sidebar" [project]="project"></app-projectv2-sidebar>
+                <ng-container *ngIf="workspaceSidebar">
+                    <app-projectv2-sidebar class="sidebar" [project]="project"></app-projectv2-sidebar>
+                </ng-container>
+                <ng-container *ngIf="runSidebar">
+                    <app-projectv2-sidebar-run class="sidebar" [project]="project"></app-projectv2-sidebar-run>
+                </ng-container>
+
             </app-resizable-panel>
             <div class="content">
                 <router-outlet></router-outlet>
